<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_green"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/text_green"
        android:text="@string/action_settings"
        android:textSize="40sp" />
    
    <RadioGroup
        android:id="@+id/difficultRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >
        
        <TextView
        android:id="@+id/textDiffTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/text_green"
        android:text="@string/difficulty_level"
        android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioDiffVerySimple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_green"
            android:checked="true"
            android:text="@string/very_simple" />

        <RadioButton
            android:id="@+id/radioDiffSimple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_green"
            android:text="@string/simple" />

        <RadioButton
            android:id="@+id/radioDiffHardcore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_green"
            android:text="@string/hardcore" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/text_green"
        android:text="@string/play_music" />

    <Button
        android:id="@+id/buttonBackFromSettings"
        android:background="@drawable/button_yellow"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="25dp"
        android:text="@string/back"
        android:textColor="@color/text_green"
        android:textSize="20sp" />

</LinearLayout>
