<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background_green"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/text_green"
        android:textSize="40sp" />
    
    <Button
        android:id="@+id/buttonStart"
        android:background="@drawable/button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="25dp"
        android:text="@string/start_game"
        android:textColor="@color/text_green"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonSettings"
            style="android:buttonBarButtonStyle"
            android:background="@drawable/button_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:text="@string/action_settings"
            android:textColor="@color/text_green"
            android:textSize="20sp" />
      
        <Button
            android:id="@+id/buttonDescription"
            style="android:buttonBarButtonStyle"
            android:background="@drawable/button_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:text="@string/title_description"
            android:textColor="@color/text_green"
            android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonRecords"
            style="android:buttonBarButtonStyle"
            android:background="@drawable/button_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:text="@string/records"
            android:textColor="@color/text_green"
            android:textSize="20sp" />
      
        <Button
            android:id="@+id/buttonExit"
            style="android:buttonBarButtonStyle"
            android:background="@drawable/button_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:text="@string/exit"
            android:textColor="@color/text_green"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>